# wtf

./: README.md  config.py  pyproject.toml
src/: cli.py  formatter.py  git.py  llm.py  models.py  storage.py
tests/: conftest.py  test_cli.py  test_git.py  test_llm.py  test_storage.py
wtf_dev/: git.py  llm.py  models.py  setup.py
