[project]
name = "wtf-dev"
version = "0.1.0"
description = "What did I work on? A snarky standup generator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "InquirerPy>=0.3.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.3.1",
    "typer>=0.21.1",
]

[project.scripts]
wtf = "wtf_dev.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
